// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Header Standardised Background image - renders correctly 1`] = `
<div
  class="ecl-page-header-standardised ecl-page-header-standardised--image"
>
  <div
    aria-hidden="true"
    class="ecl-page-header-standardised__background"
    style="background-image: url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg)"
  />
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb-standardised ecl-page-header-standardised__breadcrumb"
      data-ecl-auto-init="BreadcrumbStandardised"
      data-ecl-breadcrumb-standardised="true"
    >
      <ol
        class="ecl-breadcrumb-standardised__container"
      >
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__segment--ellipsis"
          data-ecl-breadcrumb-standardised-ellipsis=""
        >
          <button
            aria-label="Click to expand"
            class="ecl-button ecl-button--ghost ecl-breadcrumb-standardised__ellipsis"
            data-ecl-breadcrumb-standardised-ellipsis-button=""
            type="button"
          >
            …
          </button>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="expandable"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="expandable"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            Organisational structure
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            How the Commission is organised
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__current-page"
          data-ecl-breadcrumb-standardised-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-standardised__meta"
    >
      <span
        class="ecl-page-header-standardised__meta-item"
      >
        Meta info
      </span>
      <span
        class="ecl-page-header-standardised__meta-item"
      >
        DD Month YYYY
      </span>
    </div>
    <h1
      class="ecl-page-header-standardised__title"
    >
      Page title
    </h1>
    <div
      class="ecl-page-header-standardised__description-container"
    >
      <img
        alt="European flag"
        class="ecl-page-header-standardised__description-thumbnail"
        src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
      />
      <p
        class="ecl-page-header-standardised__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, eget dictum elit. Vestibulum gravida tincidunt venenatis.
      </p>
    </div>
  </div>
</div>
`;

exports[`Page Header Standardised Default - renders correctly 1`] = `
<div
  class="ecl-page-header-standardised"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb-standardised ecl-page-header-standardised__breadcrumb"
      data-ecl-auto-init="BreadcrumbStandardised"
      data-ecl-breadcrumb-standardised="true"
    >
      <ol
        class="ecl-breadcrumb-standardised__container"
      >
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__segment--ellipsis"
          data-ecl-breadcrumb-standardised-ellipsis=""
        >
          <button
            aria-label="Click to expand"
            class="ecl-button ecl-button--ghost ecl-breadcrumb-standardised__ellipsis"
            data-ecl-breadcrumb-standardised-ellipsis-button=""
            type="button"
          >
            …
          </button>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="expandable"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="expandable"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            Organisational structure
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            How the Commission is organised
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__current-page"
          data-ecl-breadcrumb-standardised-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-standardised__meta"
    >
      <span
        class="ecl-page-header-standardised__meta-item"
      >
        Meta info
      </span>
      <span
        class="ecl-page-header-standardised__meta-item"
      >
        DD Month YYYY
      </span>
    </div>
    <h1
      class="ecl-page-header-standardised__title"
    >
      Page title
    </h1>
    <div
      class="ecl-page-header-standardised__description-container"
    >
      <img
        alt="European flag"
        class="ecl-page-header-standardised__description-thumbnail"
        src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
      />
      <p
        class="ecl-page-header-standardised__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, eget dictum elit. Vestibulum gravida tincidunt venenatis.
      </p>
    </div>
  </div>
</div>
`;

exports[`Page Header Standardised Default renders correctly with extra attributes 1`] = `
<div
  class="ecl-page-header-standardised"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb-standardised ecl-page-header-standardised__breadcrumb"
      data-ecl-auto-init="BreadcrumbStandardised"
      data-ecl-breadcrumb-standardised="true"
    >
      <ol
        class="ecl-breadcrumb-standardised__container"
      >
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__segment--ellipsis"
          data-ecl-breadcrumb-standardised-ellipsis=""
        >
          <button
            aria-label="Click to expand"
            class="ecl-button ecl-button--ghost ecl-breadcrumb-standardised__ellipsis"
            data-ecl-breadcrumb-standardised-ellipsis-button=""
            type="button"
          >
            …
          </button>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="expandable"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="expandable"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            Organisational structure
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            How the Commission is organised
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__current-page"
          data-ecl-breadcrumb-standardised-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-standardised__meta"
    >
      <span
        class="ecl-page-header-standardised__meta-item"
      >
        Meta info
      </span>
      <span
        class="ecl-page-header-standardised__meta-item"
      >
        DD Month YYYY
      </span>
    </div>
    <h1
      class="ecl-page-header-standardised__title"
    >
      Page title
    </h1>
    <div
      class="ecl-page-header-standardised__description-container"
    >
      <img
        alt="European flag"
        class="ecl-page-header-standardised__description-thumbnail"
        src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
      />
      <p
        class="ecl-page-header-standardised__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, eget dictum elit. Vestibulum gravida tincidunt venenatis.
      </p>
    </div>
  </div>
</div>
`;

exports[`Page Header Standardised Default renders correctly with extra class names 1`] = `
<div
  class="ecl-page-header-standardised custom-class custom-class--test"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb-standardised ecl-page-header-standardised__breadcrumb"
      data-ecl-auto-init="BreadcrumbStandardised"
      data-ecl-breadcrumb-standardised="true"
    >
      <ol
        class="ecl-breadcrumb-standardised__container"
      >
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__segment--ellipsis"
          data-ecl-breadcrumb-standardised-ellipsis=""
        >
          <button
            aria-label="Click to expand"
            class="ecl-button ecl-button--ghost ecl-breadcrumb-standardised__ellipsis"
            data-ecl-breadcrumb-standardised-ellipsis-button=""
            type="button"
          >
            …
          </button>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="expandable"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="expandable"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            Organisational structure
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          class="ecl-breadcrumb-standardised__segment"
          data-ecl-breadcrumb-standardised-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb-standardised__link"
            href="/example"
          >
            How the Commission is organised
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-standardised__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          class="ecl-breadcrumb-standardised__segment ecl-breadcrumb-standardised__current-page"
          data-ecl-breadcrumb-standardised-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-standardised__meta"
    >
      <span
        class="ecl-page-header-standardised__meta-item"
      >
        Meta info
      </span>
      <span
        class="ecl-page-header-standardised__meta-item"
      >
        DD Month YYYY
      </span>
    </div>
    <h1
      class="ecl-page-header-standardised__title"
    >
      Page title
    </h1>
    <div
      class="ecl-page-header-standardised__description-container"
    >
      <img
        alt="European flag"
        class="ecl-page-header-standardised__description-thumbnail"
        src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
      />
      <p
        class="ecl-page-header-standardised__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, eget dictum elit. Vestibulum gravida tincidunt venenatis.
      </p>
    </div>
  </div>
</div>
`;
